# stock_bot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  toml pyproject.toml
docs/: index.html  script.js  styles.css
docs/data/: portfolio.json  portfolio_test.json  stockinfo.json
scripts/: account_settings.py  close_of_day.py  email_close_report.py  email_morning_report.py  liquidate_paper.py  run_close.sh  run_morning.sh  show_positions.py
src/stock_bot/: main.py
src/stock_bot/ai/: catalyst_scorer.py  stock_picker.py
src/stock_bot/brokers/ib/: __init__.py  buy_stocks.py  connect_disconnect.py  sell_all.py  sell_stocks.py
src/stock_bot/config/: picker_config.json  picker_config_5to10pct_aggressive.json  settings.py
src/stock_bot/core/: logging_config.py
src/stock_bot/data_sources/: get_list_all_stocks.py  news_fetcher.py  portfolio_writer.py  scanner.py  trend_checker.py
src/stock_bot/templates/: JSON_Template.json  catalyst_prompt.txt  picker_prompt.txt
website/: script.js
website/data/: portfolio.json
